Reformat code with ktlint