@@ -11,6 +11,8 @@ repositories {
     mavenCentral()
 }
 
+val ktlint by configurations.creating
+
 dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation("com.google.code.gson:gson:2.8.9")
@@ -18,6 +20,12 @@ dependencies {
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.1")
 
     testImplementation(kotlin("test"))
+
+    ktlint("com.pinterest:ktlint:0.43.2") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
 }
 
 tasks.test {
@@ -26,4 +34,29 @@ tasks.test {
 
 tasks.withType<KotlinCompile> {
     kotlinOptions.jvmTarget = "17"
+}
+
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+    group = "formatting"
+    description = "Check Kotlin code style deviations"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+
+    args = listOf("src/**/*.kt")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+val ktlintFormat by tasks.creating(JavaExec::class) {
+    group = "formatting"
+    description = "Check Kotlin code style deviations"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+
+    args = listOf("-F", "src/**/*.kt")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
 }
